# datom-bigdecimal-rs

./: Cargo.toml
examples/: floating-precision.rs  repeated_squares.rs
src/: lib.rs
