[package]
name = "datom-bigdecimal"
version = "0.3.0"
authors = ["Andrew Kubera", "Lutris Engineering"]
description = "Arbitrary precision decimal numbers"
documentation = "https://docs.rs/datom-bigdecimal"
homepage = "https://github.com/LutrisEng/datom-bigdecimal-rs"
repository = "https://github.com/LutrisEng/datom-bigdecimal-rs"
keywords = ["mathematics", "numerics", "decimal", "arbitrary-precision", "floating-point"]
license = "MIT/Apache-2.0"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1.44"
num-traits = "0.2"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
string-only = []
